@@ -7,6 +7,19 @@
   <version>1.0-SNAPSHOT</version>
   <name>demo</name>
   <url>http://maven.apache.org</url>
+  <build>
+  <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  
+      <configuration>
+               <forkCount>3</forkCount>
+               <reuseForks>true</reuseForks>
+               <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+      </configuration>
+
+</plugin>
+</build>     
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
